2019-05-01 elseif with example.

--- a/conditional statements.ipynb
+++ b/conditional statements.ipynb
@@ -655,6 +655,628 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "print(opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:1\n",
+      "REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:2\n",
+      "REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:34\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:34\n",
+      "wrong option!!\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option!!\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:5\n",
+      "oppo: RAM: 2GB, ROM: 32GB, COST:8000\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option!!\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:4\n",
+      "vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\n",
+      "wrong option!!\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option!!\")\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "if opt not in [\"1\",\"2\",\"3\",\"4\",\"5\"]:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[10,20,30,40]\n",
+    "k=20\n",
+    "if k in l:\n",
+    "    print(\"found\")\n",
+    "else:\n",
+    "    print(\"not fund\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:34\n",
+      "wrong option\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "if opt not in [\"1\",\"2\",\"3\",\"4\",\"5\"]:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:1\n",
+      "REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "if opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "if opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "if opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "if opt not in [\"1\",\"2\",\"3\",\"4\",\"5\"]:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:2\n",
+      "REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:4\n",
+      "vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:10\n",
+      "wrong option\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    print(\"wrong option\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:2\n",
+      "REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "    \n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-15-25397810a446>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-25397810a446>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print(\"thank you!!\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mobiles in my store:\n",
+      "\t1. Redmi 6A\n",
+      "\t2.Redmi pro\n",
+      "\t3.lenovo note3\n",
+      "\t4.vivov10\n",
+      "\t5.oppo\n",
+      "Enter an option:2\n",
+      "REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\n",
+      "thank you!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The mobiles in my store:\\n\\t1. Redmi 6A\\n\\t2.Redmi pro\\n\\t3.lenovo note3\\n\\t4.vivov10\\n\\t5.oppo\")\n",
+    "opt=input(\"Enter an option:\")\n",
+    "if opt==\"1\":\n",
+    "    print(\"REDMI 6A: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"2\":\n",
+    "    print(\"REDMI PRO: RAM: 4GB, ROM: 68GB, COST:12000\")\n",
+    "elif opt==\"3\":\n",
+    "    print(\"LENOVO NOTE3: RAM: 3GB, ROM: 32GB, COST:7000\")\n",
+    "elif opt==\"4\":\n",
+    "    print(\"vivo v10: RAM: 2GB, ROM: 32GB, COST:6700\")\n",
+    "elif opt==\"5\":\n",
+    "    print(\"oppo: RAM: 2GB, ROM: 32GB, COST:8000\")\n",
+    "else:\n",
+    "    pass\n",
+    "print(\"thank you!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
