2019-05-06 yield and string memory organization, mutability and immutaabilityu

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2699,6 +2699,512 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=\"apple;orange;apple;banana;apple;grape; apple\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "st1\n",
+      "result= 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    return 10\n",
+    "    print(\"st2\")\n",
+    "    return 20\n",
+    "    print(\"st3\")\n",
+    "    return 30\n",
+    "res=fun()\n",
+    "print(\"result=\",res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result= <generator object fun at 0x7fac9c335480>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield 10\n",
+    "    print(\"st2\")\n",
+    "    yield 20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"result=\",res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result= <generator object fun at 0x7fac9c335570>\n",
+      "st1\n",
+      "iteration started\n",
+      "i= 10\n",
+      "iteration ended\n",
+      "st2\n",
+      "iteration started\n",
+      "i= 20\n",
+      "iteration ended\n",
+      "st3\n",
+      "iteration started\n",
+      "i= 30\n",
+      "iteration ended\n",
+      "htanks\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield 10\n",
+    "    print(\"st2\")\n",
+    "    yield 20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"result=\",res)\n",
+    "for i in res: #res.next()\n",
+    "    print(\"iteration started\")\n",
+    "    print(\"i=\",i)\n",
+    "    print(\"iteration ended\")\n",
+    "print(\"htanks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "st1\n",
+      "iteration started\n",
+      "i= 10\n",
+      "iteration ended\n",
+      "st2\n",
+      "iteration started\n",
+      "i= 20\n",
+      "iteration ended\n",
+      "st3\n",
+      "iteration started\n",
+      "i= 30\n",
+      "iteration ended\n",
+      "htanks\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield 10\n",
+    "    print(\"st2\")\n",
+    "    yield 20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "for i in res: #res.next()\n",
+    "    print(\"iteration started\")\n",
+    "    print(\"i=\",i)\n",
+    "    print(\"iteration ended\")\n",
+    "print(\"htanks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "st1\n",
+      "iteration started\n",
+      "i= 10\n",
+      "iteration ended\n",
+      "st2\n",
+      "iteration started\n",
+      "i= 20\n",
+      "iteration ended\n",
+      "st3\n",
+      "htanks\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield 10\n",
+    "    print(\"st2\")\n",
+    "    yield 20\n",
+    "    print(\"st3\")\n",
+    "    return 30\n",
+    "res=fun()\n",
+    "for i in res: #res.next()\n",
+    "    print(\"iteration started\")\n",
+    "    print(\"i=\",i)\n",
+    "    print(\"iteration ended\")\n",
+    "print(\"htanks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "st1\n",
+      "iteration started\n",
+      "i= 10\n",
+      "iteration ended\n",
+      "st2\n",
+      "htanks\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield 10\n",
+    "    print(\"st2\")\n",
+    "    return  20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "for i in res: #res.next()\n",
+    "    print(\"iteration started\")\n",
+    "    print(\"i=\",i)\n",
+    "    print(\"iteration ended\")\n",
+    "print(\"htanks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res= <generator object fun at 0x7fac9c335480>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    return  10\n",
+    "    print(\"st2\")\n",
+    "    yield  20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"res=\",res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res= <generator object fun at 0x7fac9c3358b8>\n",
+      "st1\n",
+      "htanks\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    return  10\n",
+    "    print(\"st2\")\n",
+    "    yield  20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"res=\",res)\n",
+    "for i in res: #res.next()\n",
+    "    print(\"iteration started\")\n",
+    "    print(\"i=\",i)\n",
+    "    print(\"iteration ended\")\n",
+    "print(\"htanks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res= <generator object fun at 0x7fac9c3357c8>\n",
+      "st1\n",
+      "10\n",
+      "st2\n",
+      "20\n",
+      "st3\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield  10\n",
+    "    print(\"st2\")\n",
+    "    yield  20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"res=\",res)\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res= <generator object fun at 0x7fac9c3355e8>\n",
+      "st1\n",
+      "10\n",
+      "st2\n",
+      "20\n",
+      "st3\n",
+      "30\n",
+      "********************\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"st1\")\n",
+    "    yield  10\n",
+    "    print(\"st2\")\n",
+    "    yield  20\n",
+    "    print(\"st3\")\n",
+    "    yield 30\n",
+    "res=fun()\n",
+    "print(\"res=\",res)\n",
+    "for i in res:\n",
+    "    print(i)\n",
+    "print(\"*\"*20)\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    return [10,20,30,40,50,60]\n",
+    "res=fun()\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    yield 10\n",
+    "    yield 20\n",
+    "    yield 30\n",
+    "    yield 40\n",
+    "    yield 50\n",
+    "    yield 60\n",
+    "res=fun()\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    i=10\n",
+    "    while i<70:\n",
+    "        yield i\n",
+    "        i=i+10\n",
+    "res=fun()\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res= 10\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-e685397dddf0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"res=\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    i=10\n",
+    "    while i<70:\n",
+    "        return i\n",
+    "        i=i+10\n",
+    "res=fun()\n",
+    "print(\"res=\",res)\n",
+    "for i in res:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-665a8c31cf25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "for i in 10:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"10\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
